@@ -1,0 +1,8 @@
+#ifndef DEF_OBSTACLES
+#define DEF_OBSTACLES
+
+void setObstacle(int x, int z);
+void setFree(int x, int z);
+char isFree(int x, int z);
+
+#endif
