@@ -2,19 +2,38 @@
 #include "structs.h"
 #include "config.h"
 #include "players.h"
+#include "obstacles.h"
 
 
 void goForward(player * p){
-    p->x += cos(p1.angle) * MOV_UNIT * deltaMoment;
+    float dx = cos(p1.angle) * MOV_UNIT * deltaMoment;
+    float dz = sin(p1.angle) * MOV_UNIT * deltaMoment;
+
+    if (p->x + dx < X_MIN || p->x + dx > X_MAX || !isFree(ceil(p->x + dx + ((dx > 0)?1:-1) * X_HITBOX), ceil(p->z))){
+	dx = 0;
+    }
+    if (p->z + dz < Z_MIN || p->z + dz > Z_MAX || !isFree(ceil(p->x), ceil(p->z + dz + ((dz > 0)?1:-1) * Z_HITBOX))){
+	dz = 0;
+    }
+    p->x += dx;
     p->y += 0;
-    p->z += sin(p1.angle) * MOV_UNIT * deltaMoment;
+    p->z += dz;
 }
 
 
 void goBackward(player * p){
-    p->x -= cos(p->angle) * MOV_UNIT * deltaMoment;
+    float dx = cos(p1.angle) * MOV_UNIT * deltaMoment;
+    float dz = sin(p1.angle) * MOV_UNIT * deltaMoment;
+
+    if (p->x - dx < X_MIN || p->x - dx > X_MAX || !isFree(ceil(p->x - dx - ((dx > 0)?1:-1) * X_HITBOX), ceil(p->z))){
+	dx = 0;
+    }
+    if (p->z - dz < Z_MIN || p->z - dz > Z_MAX || !isFree(ceil(p->x), ceil(p->z - dz - ((dz > 0)?1:-1) * Z_HITBOX))){
+	dz = 0;
+    }
+    p->x -= dx;
     p->y -= 0;
-    p->z -= sin(p->angle) * MOV_UNIT * deltaMoment;
+    p->z -= dz;
 }
 
 
@@ -34,9 +53,9 @@ void fire(player * p){
     if (p->proj.n >= MAX_PROJ || p->fire_cooldown != 0){
 	return;
     }
-    p->proj.p[p->proj.n].x = p->x + 2 * cos(p->angle);
-    p->proj.p[p->proj.n].y = p->y - 0.5;
-    p->proj.p[p->proj.n].z = p->z + 2 * sin(p->angle);
+    p->proj.p[p->proj.n].x = p->x + cos(p->angle);
+    p->proj.p[p->proj.n].y = p->y - 0.1;
+    p->proj.p[p->proj.n].z = p->z + sin(p->angle);
     p->proj.p[p->proj.n].angle = p->angle;
     p->proj.p[p->proj.n].ttl = PROJ_TTL;
     p->proj.n ++;
